Added the Home section

--- a/index.html
+++ b/index.html
@@ -28,6 +28,39 @@
             <a href="#contact">Contact</a>
         </nav>
       </header>
+
+      <section class="home" id="home">
+        <div class="home-content">
+            <h1>Hello, It's <span>Gimasha Ranasinghe</span></h1>
+            <h3>I'm a <span>Software Engineering Undergraduate.</span></h3>
+            <p>A dedicated and hard-working individual with a passion for learning and growing. 
+                Currently pursuing Software Engineering degree program at University of Kelaniya, Sri Lanka. 
+                I am a quick learner and a team player with excellent communication skills. 
+                I am looking for an opportunity to work in a challenging environment to prove 
+                my skills and utilize my knowledge & intelligence in the growth of the organization.
+            </p>
+
+            <div class="social-icons">
+                <a href="tel:94705350058"><i class='bx bxs-phone-call' ></i></a>
+                <a href="#contact"><i class='bx bxl-gmail'></i></a>
+                <a href="www.linkedin.com/in/gimasha-ranasinghe-4a2191263"><i class='bx bxl-linkedin' ></i></a>
+                <a href="https://github.com/gimasha-ranasinghe"><i class='bx bxl-github'></i></a>
+                <a href="https://medium.com/@gkavindi16"><i class='bx bxl-medium'></i></a>
+            </div>
+
+            <div class="btn-group">
+                <a href="#" class="btn">Hire</a>
+                <a href="#contact" class="btn">Contact Me</a>
+
+            </div>
+            
+        </div>
+
+        <div class="home-img">
+            <img src="Gimasha Ranasinghe.jpg" alt="">
+        </div>
+
+      </section>
     
     <!-- link to js file -->
     <script src="index.js"></script>
